Fix carousel white space

--- a/new site/css/style.css
+++ b/new site/css/style.css
@@ -56,6 +56,11 @@ li {
     padding-top: 0px;
 }
 
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
+
 /* media query */
 @media (min-width: 767px) {
     #toggler {
